commit all for debug.